--- a/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
+++ b/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
@@ -1,7 +1,10 @@
 =Getting started with source control=
 
+===Some browser issues===
+  * This wiki page is not rendered correctly in IE7.0 for some reason. I am using Chrome 15.0.874.106 m and it renders fine!
+
 ===IDE and Development Environment===
-  * I am using NetBeans 7.0.1
+  * NetBeans 7.0.1
   * Tomcat 7.0.1
   * JDK 6
 
@@ -13,7 +16,7 @@
 ===Getting password to be used for any operation===
   * Get code.google.com password
   * Sign in to Project Hosting
-  * Go to Profile >> Settings
+  * Go to Profile (Top Right corner of the UI) >> Settings
   * Take note of the password
   * In my case the password is *fp9zb9xN5uB3*
 
@@ -21,7 +24,7 @@
   * Sign in to Project Hosting
   * Go to Project>>Source
   * Will be in the format of [https://journal-distribution-system.googlecode.com/svn/trunk/]
-  * *If you use http instead of https you will have authentication problem*
+  * *If you use http instead of https you will have authentication problems*
 
 ===Network Settings===
   * Goto TortoiseSVN>>Settings>>Network
@@ -31,8 +34,8 @@
   * Create a folder called as sandbox
   * Right Click on folder >> SVN Checkout...
   * Check if the Repository URL is [https://journal-distribution-system.googlecode.com/svn/trunk/]
-  * Check if the directory in which the code has to be brought from google code is correct.
-  * press OK and the code will be brought from google code to your laptop.
+  * Check if the local directory in which the code has to be brought from google code is correct.
+  * Press OK and the code will be brought from google code to your laptop.
 
 ===Opening code in NetBeans for the first time===
   * Open NetBeans. Check if you are able to load the project
@@ -48,9 +51,9 @@
   * It is always a good idea to "update" your view with the latest changes from the server before commiting the new changes.
   * Also it a good idea to file a bug in the bug tracker and refer to the bug ID in the "Comments".
 
-===If you are getting error like "org.tigris.subversion.javahl.ClientException: The path appears to be part of a Subversion 1.7 or greaterworking copy. Please upgrade your Subversion client to use thisworking copy" ===
-  * Open the file netbeans.conf. I have my Netbeans installed in D://TECH_INSTALLS/NetBeans 7.0.1
-  * I found the file at D://TECH_INSTALLS/NetBeans 7.0.1/etc/netbeans.conf
+===If you are getting error like  "org.tigris.subversion.javahl.ClientException: The path appears to be part of a Subversion 1.7 or greaterworking copy. Please upgrade your Subversion client to use thisworking copy" ===
+  * Open the file netbeans.conf. I have my Netbeans installed in D:\TECH_INSTALLS\NetBeans 7.0.1
+  * I found the file at D:\TECH_INSTALLS\NetBeans 7.0.1/etc/netbeans.conf
   *  In "netbeans_default_options", I added the string "-J-DsvnClientAdapterFactory=commandline" as the last option
   * Then re-start Netbeans
   * Reload the project. You may see a popup saying "NetBeans Subversion support requires a Subversion client!". Select option "Install Subversion Commandline Client". Give the patch where Subversion 1.7 is installed. In my cas, I gave the path as "C:/Program Files/TortoiseSVN/bin"
@@ -60,7 +63,7 @@
 
 ===Which files should go into source control when you are using NetBeans===
   * http://netbeans.org/kb/docs/java/import-eclipse.html#versioning
-  * If the project is checked out of a version control system, the build (or nbbuild), dist (or nbdist), and the nbproject/private folders should not be checked into that version control system. If the project is under the CVS, Subversion, or Mercurial version control systems, the appropriate "ignore" files are created or updated for these directories when the project is imported. Though nbproject/private should be ignored, nbproject should be checked into the version control system. nbproject contains project metadata that enables others users to open the project in NetBeans without having to import the project first.
+  * If the project is checked out of a version control system, the *build* (or *nbbuild*), *dist* (or *nbdist*), and the *nbproject/private* folders should not be checked into that version control system. If the project is under the CVS, Subversion, or Mercurial version control systems, the appropriate "ignore" files are created or updated for these directories when the project is imported. Though nbproject/private should be ignored, nbproject should be checked into the version control system. nbproject contains project metadata that enables others users to open the project in NetBeans without having to import the project first.
 
 ===Setting ignore for certain directories===
   * Click on NetBeans >> Team >> Show Changes
@@ -73,7 +76,7 @@
   * Right click on folder >> TortoiseSVN >> Import
   * Give the URL as [https://journal-distribution-system.googlecode.com/svn/trunk/]
   * Give username as the google username and the password should be what is noted above
-  * If yo get an error with saying "Cannot connect...", then it means the proxy is not set correctly.
+  * If you get an error saying "Cannot connect...", then it means the proxy settings in the TortoiseSVN are not set correctly.
 
 ===Integrating bug tracker with version control===
   * Install gurtle
@@ -81,4 +84,3 @@
   * Enter local path where the bug tracker data can be stored.
   * Give parameters as "project=journal-distribution-system". Click on "Options" >> Test
   * I got a message "The Google Code project ... appears valid and reachable at ...." 
-
