--- a/wiki/3_integration_of_issue_tracker_and_version_control.wiki
+++ b/wiki/3_integration_of_issue_tracker_and_version_control.wiki
@@ -4,7 +4,9 @@
   * The way issue trakcer and version control will be used is as follows:
     # *Every code that is committed to the main branch should have a bug associated with it.*
     # The template to be used for *new issue*, *update an issue* and *fix an issue* is given below.
-    # Save the 3 templates to your laptop. In NetBeans, right click on the folder, file to be committed. In the "Commit Message", click on "Load template". This option is present on the top right corner inline with the "Commit Message" label. Select "Automatically fill into commit message". Click on "Load File". Load the appropriate template and edit the relevant information. Remove the text that is not required e.g Remove "#" for the right label and remove the other labels.
+    # Save the 3 templates to your laptop. 
+    # In NetBeans/ right click on the folder, file to be committed. In the "Commit Message", click on "Load template". This option is present on the top right corner inline with the "Commit Message" label. Select "Automatically fill into commit message". Click on "Load File". Load the appropriate template and edit the relevant information. Remove the text that is not required e.g Remove "#" for the right label and remove the other labels.
+    # *Note*: If the issue number is wrong, then the issue will not be updated.
 
     * If you want to enter a *new issue*, then enter the following text in the *commit-log* message.
 {{{
