Edited wiki page 3_integration_of_issue_tracker_and_version_control through web user interface.

--- a/wiki/3_integration_of_issue_tracker_and_version_control.wiki
+++ b/wiki/3_integration_of_issue_tracker_and_version_control.wiki
@@ -1,8 +1,11 @@
 ===google code’s integration of issue tracker and version control===
-  * google code’s integration of issue tracker and version control permits an user to create, update, or fix an issue when you are committing a change. In a nutshell "google code’s integration of issue tracker and version control" permits to create, update and close issues just adding some keyword on your commit. Please check [http://code.google.com/p/support/wiki/IssueTracker#Integration_with_version_control] for more information.
+  * _Every code that is committed to the main branch should have an issue/ bug associated with it._ 
+  * _The enclosure in the issue should show the revision of files that were modified to address the issue._ 
+  * _The enclosure in the issue should have information on the solution._
+
+ * google code’s integration of issue tracker and version control permits an user to create, update, or fix an issue when you are committing a change. In a nutshell "google code’s integration of issue tracker and version control" permits to create, update/ add enclosures and close issues just adding some keyword on your commit. Please check [http://code.google.com/p/support/wiki/IssueTracker#Integration_with_version_control] for more information.
   
-  * The way issue trakcer and version control will be used is as follows:
-    # *Every code that is committed to the main branch should have a bug associated with it.*
+===Using issue tracker and version control through NetBeans===
     # The template to be used for *new issue*, *update an issue* and *fix an issue* is given below.
     # Save the 3 templates to your laptop. 
     # In NetBeans/ right click on the folder, file to be committed. In the "Commit Message", click on "Load template". This option is present on the top right corner inline with the "Commit Message" label. Select "Automatically fill into commit message". Click on "Load File". Load the appropriate template and edit the relevant information. Remove the text that is not required e.g Remove "#" for the right label and remove the other labels.
@@ -64,7 +67,9 @@ Fixes issue
 
   * Reference: [http://www.javalinux.it/wordpress/2009/10/17/google-code-issue-tracker-integration-with-version-control-using-git-commit-template/]
 
-===Integrating bug tracker with version control===
+
+===Using issue tracker and version control through TortoiseSVN===
+====How to setup TortoiseSVN with the issue tracker====
   * TortoiseSVN can use a COM plugin to query issue trackers when in the commit dialog. [http://code.google.com/p/gurtle/]
   * Install gurtle from the following site [http://code.google.com/p/gurtle/downloads/list]. Install the 32bit or 64bit version based on your operating system. Check the "Requirements" section in the webpage.
   * Right Click any folder >> TortoiseSVN >> Settings >> Issue Tracker Integration >> Add
@@ -101,6 +106,7 @@ Right-Click on the repository >> TortoiseSVN >> Properties and add a new propert
 
 }}} 
 
+====How to use TortoiseSVN with the issue tracker====
   * Check if the issue list is visible. Right Click on any File >> SVN Commit >> Select Issue. Click on "Select Issue", you should be able to see the list of issues.
 
   * Reference: [http://tortoisesvn.net/docs/release/TortoiseSVN_en/tsvn-dug-settings.html]
