--- a/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
+++ b/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
@@ -31,11 +31,12 @@
   * Enter the proxy server address. Enter username and password used for authentication on the proxy server
 
 ===Getting code from google code into my laptop===
-  * Create a folder called as sandbox
+  * Create a folder called as journal-distribution-system
   * Right Click on folder >> SVN Checkout...
   * Check if the Repository URL is [https://journal-distribution-system.googlecode.com/svn/trunk/]
   * Check if the local directory in which the code has to be brought from google code is correct.
   * Press OK and the code will be brought from google code to your laptop.
+  * Once the checkout is successful, then you will see the folder with a "check" sign. This indicates that the project is under source control.
 
 ===Opening code in NetBeans for the first time===
   * Open NetBeans. Check if you are able to load the project
@@ -51,6 +52,8 @@
   * It is always a good idea to "update" your view with the latest changes from the server before commiting the new changes.
   * Also it a good idea to file a bug in the bug tracker and refer to the bug ID in the "Comments".
 
+  *Note: A better way for development is using "feature branches" [https://code.google.com/p/journal-distribution-system/wiki/4_using_branches_for_development]
+
 ===If you are getting error like  "org.tigris.subversion.javahl.ClientException: The path appears to be part of a Subversion 1.7 or greaterworking copy. Please upgrade your Subversion client to use thisworking copy" ===
   * Open the file netbeans.conf. I have my Netbeans installed in D:\TECH_INSTALLS\NetBeans 7.0.1
   * I found the file at D:\TECH_INSTALLS\NetBeans 7.0.1/etc/netbeans.conf
@@ -59,7 +62,7 @@
   * Reload the project. You may see a popup saying "NetBeans Subversion support requires a Subversion client!". Select option "Install Subversion Commandline Client". Give the patch where Subversion 1.7 is installed. In my cas, I gave the path as "C:/Program Files/TortoiseSVN/bin"
   * Why this change is required: Subversion 1.7 (still in beta phase) will introduce a fundamental change in the working copy format. Rather than a few hundred ".svn" directories scattered all around your directory tree, there will be a single ".svn" folder in the root directory (like in most other version control tools). Till a plugin is available to read files stored by svn 1.7 this is the only solution. For this reason the NetBeans is setup to use the command line client exclusively. This is achieved by setting the switch "-J-DsvnClientAdapterFactory=commandline"from the command-line or in the netbeans.conf file.
 
-==Advanced==
+==Advanced (Required for first time setup only)==
 
 ===Which files should go into source control when you are using NetBeans===
   * http://netbeans.org/kb/docs/java/import-eclipse.html#versioning
@@ -71,9 +74,15 @@
   * These are files that are generated and hence should not be under source control.
   * In the "Status", right click on the folder and select "Ignore". Now the directory will not be shown in "Changed list".   
 
+===Setting up project for upload into source control===
+  * Locally I have the project called as "Tracker" in the folder called as "Tracker".
+  * I want to upload the project with the name "journal-distribution-system".
+  * I renamed the project and the folder with the same name. Checked if the project compiles.
+
 ===Importing Source into Google Projects===
   * Right click on the folder you want to import into svn.
   * Right click on folder >> TortoiseSVN >> Import
   * Give the URL as [https://journal-distribution-system.googlecode.com/svn/trunk/]
-  * Give username as the google username and the password should be what is noted above
+  * Give username as the google username
+  * The password can be found by logging into google project >> Profile (Top Right corner of the UI) >> Settings
   * If you get an error saying "Cannot connect...", then it means the proxy settings in the TortoiseSVN are not set correctly.
