Edited wiki page 5_common_issues through web user interface.

--- a/wiki/5_common_issues.wiki
+++ b/wiki/5_common_issues.wiki
@@ -13,12 +13,19 @@ http://netbeans.org/bugzilla/show_bug.cgi?id=201414
 ==Problem2:==
 If you get the following error:
 {{{
-org.tigris.subversion.javahl.ClientException: The path 'C:\Users\I038668\Desktop\personal\IAS\sandbox' appears to be part of a Subversion 1.7 or greater working copy.  Please upgrade your Subversion client to use this working copy.
+org.tigris.subversion.javahl.ClientException: 
+The path 'C:\Users\I038668\Desktop\personal\IAS\sandbox' 
+appears to be part of a Subversion 1.7 or greater working copy.  
+Please upgrade your Subversion client to use this working copy.
 }}}
 ==Solution2:==
-In the C:\Program Files\netBeans\Etc add the following to the netbeans.conf.
-# command line switches:
-netbeans_default_options=-J-DsvnClientAdapterFactory=commandline
+ * Open the file netbeans.conf. I have my Netbeans installed in D:\TECH_INSTALLS\NetBeans 7.0.1
+  * I found the file at D:\TECH_INSTALLS\NetBeans 7.0.1/etc/netbeans.conf
+  *  In "netbeans_default_options", I added the string "-J-DsvnClientAdapterFactory=commandline" as the last option
+  * Then re-start Netbeans
+  * Reload the project. You may see a popup saying "NetBeans Subversion support requires a Subversion client!". Select option "Install Subversion Commandline Client". Give the patch where Subversion 1.7 is installed. In my cas, I gave the path as "C:/Program Files/TortoiseSVN/bin"
+  * Why this change is required: Subversion 1.7 (still in beta phase) will introduce a fundamental change in the working copy format. Rather than a few hundred ".svn" directories scattered all around your directory tree, there will be a single ".svn" folder in the root directory (like in most other version control tools). Till a plugin is available to read files stored by svn 1.7 this is the only solution. For this reason the NetBeans is setup to use the command line client exclusively. This is achieved by setting the switch "-J-DsvnClientAdapterFactory=commandline"from the command-line or in the netbeans.conf file.
+
 ----
 ==Problem3:==
 If you see the following problem with Netbeans when you try to use Subversion with NetBeans
