--- a/wiki/Data_Migration_Challenges.wiki
+++ b/wiki/Data_Migration_Challenges.wiki
@@ -1,4 +1,4 @@
-------------------- Inward ---------------
+= Inward =
 
 1. All inwards with old purpose as subscription have been changed to "renew subscription"
 
@@ -25,4 +25,25 @@ ERROR main JDSMigration.Inward - Could not find inward reason
 
 ERROR main JDSMigration.Inward - Could not find inward reason ld
 
+= Subscriber =
+# There are a lot of foreign cities in the subscriber data, do we need to add all of them to the cities table. The cities table will grow enormously over a period of time, as a result all pages where the cities drop down is present will become slower to load cities list.
 
+e.g.
+St Martin d'Heres		France
+Amsterdam 1000 CE		Netherlands
+Oslo 0315		Norway
+Kuala Lumpur 50730		Malaysia
+Dublin - 15		Ireland
+40125 Bologna		Italy
+Heidelberg D- 69121		Germany
+10623 Berlin		Germany
+Kowloon		Hong Kong
+Cambridge CB3 0HA		England
+CA 92143-9027		U.S.A.
+Hamburg 80, D-21029		Germany
+S-106 91 Stockholm		Sweden
+Edinburgh EH3 5LR		Scotland
+New Haven CT 06520-8101		U.S.A.
+
+= Subscription =
+# How is journal group id mapped to the subscription data in JNLS.DBF. Since there are no journal groups in the old data, how do we identify what group the journal belonged to?
