--- a/wiki/Data_Migration_Challenges.wiki
+++ b/wiki/Data_Migration_Challenges.wiki
@@ -49,3 +49,11 @@ New Haven CT 06520-8101		U.S.A.
   # How is journal group id mapped to the subscription data in JNLS.DBF. Since there are no journal groups in the old data, how do we identify what group the journal belonged to?
   # What is the significance of Amount and Paid Flag? Where those fields should be migrated to? Currently after migration it is put in remarks column.
   # There is no inward no. associated with the subscription.
+  # There are subscription with all Zero entries, what is the significance of this record
+  # Start Year is three digit, what does this mean?
+  # Start year and end year is zero?
+  # Paid Flag has Y,P, etc what does each mean?
+  # Identification of group id:
+    ## If all journals are subscribed, the group id should be the 1 to 11 group,
+    ## if all except 1st journal group is subscribed, then it should be 2 to 11 group
+    ## All other cases, should be individual journals.
