Edited wiki page Discussion through web user interface.

--- a/wiki/Discussion.wiki
+++ b/wiki/Discussion.wiki
@@ -25,3 +25,4 @@
     ## Send email on exception in the exception handler.
     ## Identify duplicate subscribers are in which file and migrate subscriber from other .dbf file
     ## Complete request for invoice.
+    ## Back issue list
