--- a/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
+++ b/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
@@ -27,7 +27,7 @@
   * Right click->select Tortoise SVN->Settings->Hook Scripts-
   * Click on the Add button on the right hand side.
   * Select hook type as pre-update hook
-  * Select the JDS root in the "Working Copy Path"
+  * Select the JDS root(e.g. D:\IAS\JDS) in the "Working Copy Path"
   * Select the path to JDS\db\generateschema.bat in the "Command line to execute" text box.
   * Every time an update occurs the .sql files in the JDS\db folder gets refreshed
 
