--- a/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
+++ b/wiki/1_Getting_started_with_source_control_using_TortoiseSVN.wiki
@@ -29,6 +29,8 @@
   * Select hook type as pre-update hook
   * Select the JDS root(e.g. D:\IAS\JDS) in the "Working Copy Path"
   * Select the path to JDS\db\generateschema.bat in the "Command line to execute" text box.
+  * Select the check box "Wait for script to finish" and press OK
+  * Run an update and you should see a command window running generateschema.bat
   * Every time an update occurs the .sql files in the JDS\db folder gets refreshed
 
 ===Before committing changes===
