--- a/wiki/Data_Migration_Challenges.wiki
+++ b/wiki/Data_Migration_Challenges.wiki
@@ -1,4 +1,4 @@
-= Inward =
+ = Inward =
 
 1. All inwards with old purpose as subscription have been changed to "renew subscription"
 
@@ -48,12 +48,12 @@ New Haven CT 06520-8101		U.S.A.
 }}}
 = Subscription =
   # How is journal group id mapped to the subscription data in JNLS.DBF. Since there are no journal groups in the old data, how do we identify what group the journal belonged to?
-  # What is the significance of Amount and Paid Flag? Where those fields should be migrated to? Currently after migration it is put in remarks column. - TBD
+  # What is the significance of Amount and Paid Flag? Where those fields should be migrated to? Currently after migration it is put in remarks column. - Ignore
   # There is no inward no. associated with the subscription. - Ignore. Missing info. Maybe mark it with something.
   # There are subscription with all Zero entries, what is the significance of this record - ignore these records
   # Start Year is three digit, what does this mean? - data entry mistake
   # Start year and end year is zero? - Check if DATE_RES and DATE_CURR
-  # Paid Flag has Y,P, etc what does each mean? - TBD
+  # Paid Flag has Y,P, etc what does each mean? - Ignore
   # Subscription does not have subscriber id - Check if all entries are zero. If yes, ignore this row.
   # Identification of group id:
     ## If all journals are subscribed, the group id should be the 1 to 11 group,
@@ -68,9 +68,14 @@ New Haven CT 06520-8101		U.S.A.
     ## There are some fellows who do not want a hard copy. For them the no of copies will be made 0
     ## Migrate all fellows
 ---
-    #JNLS.DBF - If end year is blank it means subscription is for 1 year
-    #Row no in CORR.DBF corresponds to REC_NO in JNLS.DBF
-    #PRO_NO - Proformo Number
-    #CORR.DBF - has entry as "PLEASEREFER" in REF_NO, these are the please refer list folks
-    #All rows which have PR0_NO will be present in the please refer list
-    #If col CHK_NO is empty, then payment is pending. Check entries in U, V, W, X
+    # JNLS.DBF - If end year is blank it means subscription is for 1 year
+    # Row no in CORR.DBF corresponds to REC_NO in JNLS.DBF
+    # PRO_NO - Proformo Number
+    # CORR.DBF - has entry as "PLEASEREFER" in REF_NO, these are the please refer list folks
+    # All rows which have PR0_NO will be present in the please refer list
+    # If col CHK_NO is empty, then payment is pending. Check entries in U, V, W, X
+    # PR List - this is list of people whose subscription say ended in 2011, but have not renewed. A bill is sent to all the people in this list. They are not included in the mailing list till the actual bill arrives.
+    # Summer Fellows - SRF in the remarks or checque or reference column
+    # RC - Refresher Course
+    # KYPY - 
+    # KALM - Kumari Ali Mera Trust
